--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -20,9 +20,7 @@
 	</div>
 	
 	<div class='userInterface'>
-		Put your UI code here... or don't, I can't tell you what to do
-		<br> <br>
-		Note - If the map isn't working check the API key in the script tag above. 
+		<button onclick="getAllMarkers()">Test Database</button>
 	</div>
 	
 	<div class="dsclogo">
