--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -21,6 +21,8 @@
 	
 	<div class='userInterface'>
 		<button onclick="getAllMarkers()">Test Database</button>
+		
+		<button onclick="saveLocation(569,5678)">Save Location</button>
 	</div>
 	
 	<div class="dsclogo">
