--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -20,9 +20,11 @@
 	</div>
 	
 	<div class='userInterface'>
-		<button onclick="getAllMarkers()">Test Database</button>
+		<input type='text' id='latTextBox' placeholder="latitude">
+		<input type='text' id='longTextBox' placeholder="longitute">
 		
-		<button onclick="saveLocation(569,5678)">Save Location</button>
+		<button onclick="saveLocation()">Save Location</button>
+		<button onclick="getAllMarkers()">Test Database</button>
 	</div>
 	
 	<div class="dsclogo">
