--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -20,8 +20,8 @@
 	</div>
 	
 	<div class='userInterface'>
-		<input type='text' id='latTextBox' placeholder="latitude">
-		<input type='text' id='longTextBox' placeholder="longitute">
+		<input type='text' id='latTextBox' placeholder="latitude" class="textbox">
+		<input type='text' id='longTextBox' placeholder="longitute" class="textbox">
 		
 		<button onclick="saveLocation()">Save Location</button>
 		<button onclick="getAllMarkers()">Test Database</button>
