--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -7,30 +7,60 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 	<meta name='description' content='Google Maps API Challenge for DSC'>
 	<meta name='keywords' content='Google, DSC, McMaster, Maps, API'>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=[YOUR API KEY HERE]&callback=initMap&libraries=&v=weekly"
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANAB6apLhsIziBv1AhOX4RD7Lbcm4uPzk&callback=initMap&libraries=&v=weekly"
 		defer></script>
-	<script src='index.js'></script>
 	<link rel='stylesheet' href='styles.css'>
 	<title>Google Maps Fullstack Challenge</title>
 </head>
 
 <body>
 	<div id="map" class='map'>
-		
+
 	</div>
-	
+
 	<div class='userInterface'>
-		Put your UI code here... or don't, I can't tell you what to do
+		<input type='text' id='latTextBox' placeholder="latitude">
+		<input type='text' id='longTextBox' placeholder="longitude">
+		<button onclick="saveLocation()">Save Location</button>
+		<button onclick="getAllMarkers()">Test Database</button>
 		<br> <br>
-		Note - If the map isn't working check the API key in the script tag above. 
+		Note - If the map isn't working check the API key in the script tag above.
 	</div>
-	
+
 	<div class="dsclogo">
-		<img src="assets/dscLogo.png" alt="DSC"/>
+		<img src="assets/dscLogo.png" alt="DSC" />
 		<span class="text">Google DSC - McMaster</span>
 	</div>
-	
+
+
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
+
+	<!-- TODO: Add SDKs for Firebase products that you want to use
+    	 https://firebase.google.com/docs/web/setup#available-libraries -->
+	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/8.1.1/firebase-firestore.js"></script>
+
+	<script>
+		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		var firebaseConfig = {
+			apiKey: "AIzaSyBMYxjd1H1Mwgl5sJMjfUI6kGmCScJM5xU",
+			authDomain: "code-night-4-f0a8d.firebaseapp.com",
+			projectId: "code-night-4-f0a8d",
+			storageBucket: "code-night-4-f0a8d.appspot.com",
+			messagingSenderId: "1015348537722",
+			appId: "1:1015348537722:web:2b5479470ffdfd65bd4ec3",
+			measurementId: "G-9T8N3FM1MJ"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+	</script>
+
+	<script src='index.js'></script>
+
 </body>
 
 </html>
