--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -8,7 +8,7 @@
 	<meta name='description' content='Google Maps API Challenge for DSC'>
 	<meta name='keywords' content='Google, DSC, McMaster, Maps, API'>
 	<script
-		src="https://maps.googleapis.com/maps/api/js?key=[YOUR API KEY HERE]&callback=initMap&libraries=&v=weekly"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7sds8GxckbZkRqzZw0wHSUhdwg3057yQ&callback=initMap&libraries=&v=weekly"
 		defer></script>
 	<script src='index.js'></script>
 	<link rel='stylesheet' href='styles.css'>
