--- a/google-maps/google-maps-vanilla/login.html
+++ b/google-maps/google-maps-vanilla/login.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
 
 <head>
-	<meta charset='UTF-8'>
-	<link rel="icon" href="assets/dscLogo.png" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	<meta name='description' content='Google Maps API Challenge for DSC'>
-	<meta name='keywords' content='Google, DSC, McMaster, Maps, API'>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBu1797AV7CSx5kxES7OFof2DEd1rNOoo&callback=initMap&libraries=&v=weekly"
-		defer></script>
-	<link rel='stylesheet' href='styles.css'>
-	<title>Google Maps Fullstack Challenge</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
@@ -24,6 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
+    <link type="text/css" rel="stylesheet" href="login.css" />
 
     <script>
         // Your web app's Firebase configuration
@@ -44,32 +37,17 @@
 </head>
 
 <body>
-	<div class='searchBox'>
-		<input class="searchInput" id="address" type="textbox" placeholder="Toronto, Canada" />
-		<button id="address-submit" class="searchButton" href="#">
-			<i class="material-icons">
-				search
-			</i>
-		</button>
-	</div>
-
-	<div class="logout">
-		<button onclick="logOut()">Log Out</button>
-	</div>
-
-	<div class="map-container">
-		<div id="map" class='map'>
-
-		</div>
-	</div>
+    <h1 class="title">Code Night #4 Submission - Leonardo Spallino</h1>
+    <div id="firebaseui-auth-container"></div>
+    <div id="loader">Loading...</div>
 
 	<div class="dsclogo">
 		<img src="assets/dscLogo.png" alt="DSC" />
 		<span class="text">Google DSC - McMaster</span>
 	</div>
 
-	<script src='index.js'></script>
 
+    <script src="login.js"></script>
 </body>
 
 </html>
