--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -8,29 +8,56 @@
 	<meta name='description' content='Google Maps API Challenge for DSC'>
 	<meta name='keywords' content='Google, DSC, McMaster, Maps, API'>
 	<script
-		src="https://maps.googleapis.com/maps/api/js?key=[YOUR API KEY HERE]&callback=initMap&libraries=&v=weekly"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOVxmJxY3ciaJsplDlKeG1F5p6St0Bhhw&callback=initMap&libraries=&v=weekly"
 		defer></script>
-	<script src='index.js'></script>
+	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	<link rel='stylesheet' href='styles.css'>
 	<title>Google Maps Fullstack Challenge</title>
 </head>
 
 <body>
-	<div id="map" class='map'>
-		
-	</div>
+	<div id="map" class='map'></div>
 	
 	<div class='userInterface'>
-		Put your UI code here... or don't, I can't tell you what to do
-		<br> <br>
-		Note - If the map isn't working check the API key in the script tag above. 
+		<input type='text' id='location-input' placeholder="Address">
+		<button onclick="Geocode(event)">Pin to Map</button>
+		<button onclick="getMarkers()">Display Markers</button>
+
+		<div class="card-block"><div id="formatted-address"></div></div>
+        <div class="card-block"><div id="address-components"></div></div>
+        <div class="card-block"><div id="geometry"></div></div>
 	</div>
 	
 	<div class="dsclogo">
 		<img src="assets/dscLogo.png" alt="DSC"/>
 		<span class="text">Google DSC - McMaster</span>
 	</div>
-	
+
+
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-app.js"></script>
+	<!-- TODO: Add SDKs for Firebase products that you want to use https://firebase.google.com/docs/web/setup#available-libraries -->
+	<script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script>
+	<script defer src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
+	<script>
+		// Your web app's Firebase configuration
+		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+		var firebaseConfig = {
+			apiKey: "AIzaSyBOVxmJxY3ciaJsplDlKeG1F5p6St0Bhhw",
+			authDomain: "dsc-maps-challenge.firebaseapp.com",
+			projectId: "dsc-maps-challenge",
+			storageBucket: "dsc-maps-challenge.appspot.com",
+			messagingSenderId: "323810490901",
+			appId: "1:323810490901:web:2e5f514a8d3b1754466c1c",
+			measurementId: "G-21XCJZR3FM"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+	</script>
+
+	<script src='index.js'></script>
 </body>
 
 </html>
