--- a/google-maps/google-maps-vanilla/index.html
+++ b/google-maps/google-maps-vanilla/index.html
@@ -44,6 +44,43 @@
 </head>
 
 <body>
+	<nav>
+		<i data-modal-target="#modal" class="info material-icons md-dark md-36" alt="About this app">
+			info
+		</i>
+
+		<i class="logout md-36 material-icons" id="logout-button" alt="Logout">
+			exit_to_app
+		</i>
+		
+		<div class="modal" id="modal">
+			<div class="modal-header">
+				<div class="title">Welcome to my Full Stack Challenge submission!</div>
+				<i data-close-button class="close-button material-icons">
+					clear
+				</i>
+			</div>
+			
+			<div class="modal-body">
+				The purpose of this app was to implement Firebase and interact with the Google Maps API! <br><br>
+				You will notice that all there really is to this is a search bar, and the original spirit of the challenge was
+				to enter a longitude and latitude as an input parameter and place a marker on the map for that location. <br>
+				By leveraging the APIs geocoding feature, we can actually search for any Country, City, Town, business, or co-ordinates
+				and be able to find the location on the map! <br><br>
+
+				You will notice that after you login, several markers are already populated on the map. Every time the app is
+				opened, all the stored markers are drawn on the map, and any new searches will be added to the database as well.
+				<br><br>
+
+				Lastly, if you look around the map at at the current existing markers, you'll find some of my favourite spots
+				that I've traveled to :) <br><br>
+				Enjoy!<br>
+				-Leo
+			</div>
+		</div>
+		<div id="overlay"></div>
+	</nav>
+
 	<div class='searchBox'>
 		<input class="searchInput" id="address" type="textbox" placeholder="Toronto, Canada" />
 		<button id="address-submit" class="searchButton" href="#">
@@ -51,10 +88,6 @@
 				search
 			</i>
 		</button>
-	</div>
-
-	<div class="logout">
-		<button onclick="logOut()">Log Out</button>
 	</div>
 
 	<div class="map-container">
