--- a/web-scraper/vanilla-challenge/index.html
+++ b/web-scraper/vanilla-challenge/index.html
@@ -10,19 +10,21 @@
 	</head>
 	<body style="background: linear-gradient(to right, #00467f, #a5cc82); /* W3C, Firefox 16+, Chrome 26+ */">
 		<div class="container">
-			<div class="row justify-content-center no-gutters m-2">
-				<div class="col p-0"><input class="form-control text-center" type="text" placeholder="URL Here" id="url" /></div>
-				<div class="col-1">
-					<button class="btn btn-primary" type="submit" id="submit" onclick="myFunction()">Submit</button>
+			<form method="POST" action="/scrape">
+				<div class="col p-0" style="display: flex">
+					<input class="form-control text-center" type="text" placeholder="URL Here" name="url" style="width: calc(100% - 120px); border-bottom-right-radius: 0; border-top-right-radius: 0" />
+					<button class="btn btn-primary" type="submit" id="submit" style="border-bottom-left-radius: 0; border-top-left-radius: 0">Submit</button>
 				</div>
-			</div>
+			</form>
+
 			<div class="row justify-content-center">
 				<div class="card" style="height: 700px; opacity: 0.95; border-width: 3px; border-color: firebrick">
-					<div class="card-body" style="margin: 0" id="data"></div>
+					<div class="card-body" style="margin: 0" id="data">
+						<img src="" id="tings" />
+					</div>
 				</div>
 			</div>
 		</div>
-		<script src="index.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
