--- a/web-scraper/vanilla-challenge/index.html
+++ b/web-scraper/vanilla-challenge/index.html
@@ -19,9 +19,7 @@
 
 			<div class="row justify-content-center">
 				<div class="card" style="height: 700px; opacity: 0.95; border-width: 3px; border-color: firebrick">
-					<div class="card-body" style="margin: 0" id="data">
-						<img src="" id="tings" />
-					</div>
+					<div class="card-body" style="margin: 0" id="data"></div>
 				</div>
 			</div>
 		</div>
